--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "String Gen Bot",
+    "name": "استخـــــــــراج تيبثـــون",
     "description": "A Telegram Bot to generate Telethon and Pyrogram String Session.",
     "logo": "https://telegra.ph/file/654ddaf472f18b799600b.jpg",
     "keywords": [
@@ -11,7 +11,7 @@
         "pyrogram",
         "telethon"
     ],
-    "repository": "https://github.com/Tepthonee/StringGenBotTep",
+    "repository": "https://github.com/Tepthonee/ArTepString",
     "env": {
       "API_ID": {
         "description": "Get this value from https://my.telegram.org",
