--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
     "name": "استخـــــــــراج تيبثـــون",
-    "description": "A Telegram Bot to generate Telethon and Pyrogram String Session.",
+    "description": "A Telegram Bot to get
+    Telethon and Pyrogram String Session.",
     "logo": "https://telegra.ph/file/654ddaf472f18b799600b.jpg",
     "keywords": [
         "python3",
