--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,5 @@
 API_ID=19645327 
 API_HASH=92de937beb2f87db08df95bcca0ac2d6
-BOT_TOKEN=6437907769:AAEgVIwRLzPPcoWZvTn8cFgkR1stTrMVJBM
+BOT_TOKEN=6437907769:AAHGqmY8N3DU6cQIQ3YcNhTaGtU9UxgoAYA
 OWNER_ID=1260465030
-MONGO_DB_URI=mongodb+srv://mohammadtaleb2012t:hamoda7@cluster0.xwc4uff.mongodb.net/?retrywrites=true&w=majority
+MONGO_DB_URI=mongodb+srv://Tepthona:TepthonArabic@cluster0.dqmmh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
